--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,15 @@ li {
   cursor: pointer;
 }
 
-.home {
+li a {
+  text-decoration: none;
+  color: white;
+}
+
+.home,
+.create,
+.blog-details,
+.not-found {
   width: 80%;
   margin: auto;
   padding: 15px;
@@ -46,7 +54,12 @@ li {
 }
 
 .blog-previous {
-  margin: 20px;
+  margin-top: 40px;
+}
+
+.blog-previous a {
+  text-decoration: none;
+  color: black;
 }
 
 button {
@@ -57,4 +70,45 @@ button {
   outline: none;
   cursor: pointer;
   margin-top: 10px;
+}
+
+article * {
+  padding: 10px;
+}
+
+form {
+  margin: 20px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #f2f2f2;
+}
+
+label,
+input,
+textarea {
+  display: block;
+}
+
+label {
+  margin-bottom: 10px;
+}
+
+input[type="text"],
+textarea {
+  padding: 5px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+input[type="submit"] {
+  background-color: black;
+  color: white;
+  border-radius: 5px;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 16px;
 }
